# MADE2020_HighPerfomarmanceComputing

.ipynb_checkpoints/: HW1-checkpoint.ipynb
HW1/: HW1.ipynb
HW1/.ipynb_checkpoints/: HW1-checkpoint.ipynb
HW3/: .omp_reduct.cpp.swo  .omp_reduct.cpp.swp  README.md  app  axisb.cpp  gs.cpp  mk_pi.cpp  omp_purfoc.cpp  omp_reduct.cpp
HW4/: CMakeLists.txt  app  ls.cpp  main.cpp
HW6/: CMakeLists.txt  README.md  histogram.cu  main.cu  median.cu  template.cu
HW7/: HW7.ipynb
hw2/: CMakeLists.txt  Makefile  README.MD  main.cpp  matrix.cpp  matrix.h  multiplier_O3  multiplier_g  result.txt  static_linker.sh
th/: CMakeLists.txt  main.cpp
